[gd_scene load_steps=10 format=2]

[ext_resource path="res://segundaFase/clone_script.gd" type="Script" id=1]
[ext_resource path="res://fotos/clone_trooper.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 80, 50, 30, 50 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "clone_andando"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 80, 50, 30, 50 ), Rect2( 110, 50, 30, 50 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 245.875, 134.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 243.25, 135.5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.960784, 0.027451, 0.027451, 0.384314 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 38.0
height = 78.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.5, 67.5 )

[node name="Node2D" type="Node2D"]
position = Vector2( 504, 342 )

[node name="clone" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="clone"]
position = Vector2( -1.99997, 3 )
scale = Vector2( 3.72667, 3.31852 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 50, 30, 50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="clone"]
anims/RESET = SubResource( 2 )
anims/clone_andando = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="clone"]
position = Vector2( 5, -8 )

[node name="sensorDireito" type="Area2D" parent="clone"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="clone/sensorDireito"]
position = Vector2( 268, -10 )
shape = SubResource( 5 )

[node name="sensorEsquerdo" type="Area2D" parent="clone"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="clone/sensorEsquerdo"]
position = Vector2( -300, -14 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="clone"]
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="clone"]
margin_left = -72.0
margin_top = -84.0
margin_right = 32.0
margin_bottom = -70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 7 )
step = 20.0
value = 60.0
percent_visible = false

[node name="Area2D" type="Area2D" parent="clone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="clone/Area2D"]
position = Vector2( -19, -10 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="clone"]
position = Vector2( -17.5, 7 )
shape = SubResource( 8 )

[connection signal="body_entered" from="clone/sensorDireito" to="clone" method="_on_sensorDireito_body_entered"]
[connection signal="body_exited" from="clone/sensorDireito" to="clone" method="_on_sensorDireito_body_exited"]
[connection signal="body_entered" from="clone/sensorEsquerdo" to="clone" method="_on_sensorEsquerdo_body_entered"]
[connection signal="body_exited" from="clone/sensorEsquerdo" to="clone" method="_on_sensorEsquerdo_body_exited"]
[connection signal="timeout" from="clone/Timer" to="clone" method="_clone_atira"]
[connection signal="body_entered" from="clone/Area2D" to="clone" method="_on_Area2D_body_entered"]
